tests/fixtures/invalid/bin_float.py
# Cannot call bin() with Float
x = bin(1.0)
